[package]
name = "raspivid_mjpeg_server"
version = "0.2.0"
authors = ["Ilmari Heikkinen <hei@heichen.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.14"
